--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,9 +8,12 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@smui/button": "^7.0.0-beta.14",
+		"@smui/circular-progress": "^7.0.0-beta.14",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"svelte": "^4.0.5",
+		"svelte-loading-spinners": "^0.3.4",
 		"vite": "^4.4.2"
 	},
 	"type": "module"
