--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,14 +16,15 @@
 		"@sveltejs/kit": "^1.20.4",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-loading-spinners": "^0.3.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.1.6",
-		"svelte-loading-spinners": "^0.3.4",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.1.1",
+		"auth0": "^3.6.0",
 		"axios": "^1.4.0",
 		"dotenv": "^16.3.1",
 		"ts-node": "^10.9.1"
